tests/activitygen/errors/testsuite.activitygen
# Check wrong input
input_error
